[workspace]
members = [
  "argus",
  "argus-core",
  "argus-semantics",
  "argus-derive",
  "argus-parser",
  "argus-automata",
  "pyargus",
]

resolver = "2"

[workspace.package]
authors = ["Anand Balakrishnan"]
license = "BSD-3-Clause"

edition = "2021"
rust-version = "1.66"

readme = "README.md"
keywords = ["temporal logic", "monitoring"]
repository = "https://github.com/anand-bala/argus"

[workspace.metadata.workspaces]
allow_branch = "dev"
