[package]
name = "argus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
itertools = "0.10.5"
paste = "1.0.12"
num-traits = "0.2.15"
thiserror = "1.0.39"
proptest = { version = "1.1", optional = true }
enum_dispatch = "0.3.11"
argus-derive = { version = "0.1.0", path = "../argus-derive" }

[dev-dependencies]
argus-core = { path = ".", features = ["arbitrary"] }

[features]
default = []
arbitrary = ["dep:proptest"]
