[package]
name = "argus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
itertools = "0.11"
paste = "1.0.14"
num-traits = "0.2.16"
thiserror = "1.0.47"
proptest = { version = "1.2", optional = true }
enum_dispatch = "0.3.12"
argus-derive = { version = "0.1.0", path = "../argus-derive" }

[dev-dependencies]
argus-core = { path = ".", features = ["arbitrary"] }

[features]
default = []
arbitrary = ["dep:proptest"]
