[package]
name = "argus-derive"
version = "0.1.2"

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full"] }
