[package]
name = "argus-parser"
version = "0.1.0"

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[example]]
name = "dump_parse_tree"
required-features = ["reporting"]

[[example]]
name = "dump_expr"
required-features = ["reporting"]

[dependencies]
argus-core = { version = "0.1.0", path = "../argus-core" }
ariadne = { version = "0.3.0", optional = true }
chumsky = { version = "1.0.0-alpha.4", features = ["default", "label"] }

[features]
default = []
reporting = ["dep:ariadne"]
