[package]
name = "argus-semantics"
version = "0.1.1"

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
argus-core = { version = "0.1.1", path = "../argus-core" }
itertools = "0.11"
num-traits = "0.2.16"
paste = "1.0.14"

[dev-dependencies]
argus-core = { path = "../argus-core", features = ["arbitrary"] }
proptest = "1.2"
