[package]
name = "argus"
version = "0.1.1"

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
argus-core = { version = "0.1.1", path = "../argus-core" }
argus-parser = { version = "0.1.1", path = "../argus-parser" }
argus-semantics = { version = "0.1.1", path = "../argus-semantics" }
