[package]
name = "argus"
version = "0.1.2"

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
argus-derive = { version = "0.1.0", path = "../argus-derive" }
ariadne = { version = "0.3.0", optional = true }
chumsky = { version = "1.0.0-alpha.4", features = ["default", "label"] }
derive_more = "0.99.17"
enum_dispatch = "0.3.12"
itertools = "0.11"
num-traits = "0.2.16"
paste = "1.0.14"
proptest = { version = "1.2", optional = true }
thiserror = "1.0.47"

[dev-dependencies]
proptest = "1.2"
argus = { path = ".", features = ["arbitrary"] }

[features]
default = []
arbitrary = ["dep:proptest"]
reporting = ["dep:ariadne"]

[[example]]
name = "dump_expr"
required-features = ["reporting"]
