[package]
name = "argus"
version = "0.1.4"

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
argus-derive = { version = "0.1.0", path = "../argus-derive" }
ariadne = { version = "0.3.0", optional = true }
chumsky = { version = "1.0.0-alpha.6", features = ["default", "label"] }
derive_more = "0.99.17"
enum_dispatch = "0.3.12"
hashbrown = "0.14.1"
itertools = "0.11"
log = "0.4.20"
num-traits = "0.2.16"
paste = "1.0.14"
proptest = { version = "1.2", optional = true }
thiserror = "1.0.47"

[dev-dependencies]
proptest = "1.2"
argus = { path = ".", features = ["arbitrary"] }
env_logger = "0.10.0"

[features]
default = []
arbitrary = ["dep:proptest"]
reporting = ["dep:ariadne"]

[[example]]
name = "dump_expr"
required-features = ["reporting"]
