[package]
name = "pyargus"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyargus"
crate-type = ["cdylib"]

[dependencies]
argus-core = { version = "0.1.0", path = "../argus-core" }
argus-semantics = { version = "0.1.0", path = "../argus-semantics" }
derive_more = "0.99.17"
log = "0.4.20"
paste = "1.0.14"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
pyo3-log = "0.8.3"
