[package]
name = "pyargus"
version = "0.1.4"

authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
name = "pyargus"
crate-type = ["cdylib"]
test = false

[dependencies]
argus = { version = "0.1.1", path = "../argus" }
derive_more = "0.99.17"
log = "0.4.20"
paste = "1.0.14"
pyo3 = "0.19.2"
pyo3-log = "0.8.3"
ariadne = "0.3.0"
