[project]
name = "argus-temporal-logic"
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]

dependencies = ["typing-extensions"]
dynamic = ["version"]

[project.optional-dependencies]

dev = [
  # Type check
  "mypy",
  # Lint code
  "ruff",
  "Flake8-pyproject",
  "flake8-bugbear",
  "flake8-pyi",
  # Sort imports
  "isort",
  # Reformat
  "black",
]

test = [
  "pytest",
  "coverage",
  "hypothesis[lark]",
  "metric-temporal-logic",
  "rtamt",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "argus._argus"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --doctest-glob=../docs/*.rst --doctest-glob=../docs/**/*.rst --hypothesis-explain"
testpaths = ["tests"]

[tool.mypy]
packages = ["argus"]
# ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "mtl"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "rtamt"
ignore_missing_imports = true


[tool.ruff]
line-length = 127
select = ["E", "F", "W", "N", "B", "ANN", "PYI"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"*.py" = ["B905", "E203", "E501", "W291", "W293"]
"*.pyi" = ["B", "E501", "E701"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
per-file-ignores = [
  "__init__.py: F401",
  "__init__.pyi: F401",
  "*.py: B905, B907, B950, E203, E501, W503, W291, W293",
  "*.pyi: B, E301, E302, E305, E501, E701, E704, W503",
]
# Ignore import not used when aliases are defined
exclude = [
  # No need to traverse our git directory
  ".git/",
  # There's no value in checking cache directories
  "__pycache__/",
  # Don't check the doc
  "docs/",
  # This contains our built documentation
  "build/",
  # This contains builds of flake8 that we don't want to check
  "dist/",
  "*.egg-info",
  # Artifacts generated by linters and type checkers
  ".mypy_cache/",
  ".ruff_cache/",
]

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = false
group_by_package = true
extend_skip = [
  # No need to traverse our git directory
  ".git/",
  # There's no value in checking cache directories
  "__pycache__/",
  # Don't check the doc
  "docs/",
  # This contains our built documentation
  "build/",
  # This contains builds of flake8 that we don't want to check
  "dist/",
  "*.egg-info",
  # Artifacts generated by linters and type checkers
  ".mypy_cache/",
  ".ruff_cache/",
]

[tool.black]
line-length = 127
